--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   google_fonts: ^6.1.0
   font_awesome_flutter: ^10.6.0
   google_nav_bar: ^5.0.6
+  camera: ^0.10.5+7
 
 dev_dependencies:
   flutter_test:
