--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   font_awesome_flutter: ^10.6.0
   google_nav_bar: ^5.0.6
   mobile_scanner: ^2.1.0
+  http: ^1.1.2
 
 dev_dependencies:
   flutter_test:
